--- a/test_manus/test_manus.Rmd
+++ b/test_manus/test_manus.Rmd
@@ -62,34 +62,44 @@ Traditional forest management regimes specialized in promoting timber revenues w
 Here we explore how the restriction of forest management practices, along with the increasing level of harvest levels over the landscape affects landscape level damage of wind risk and how much timber value is put on risk under alternative regimes and extraction levels. Our study for the first time evaluates the landcspeca level wind risk combined with the forest growth simulator and long-term consequences of he applied forest management practices. Therefore, we first calculate the stand level wind risk over alternative landscapes and further explore the likely drivers of the wind risk levels. We investigated how restriction of forest management regimes combined with levels of intensity of timber extraction will affects landscape level wind risk. 
 
 
-![The study workflow from collecting initial stand conditions (2016) throught forest simulation growth under various ranges of forest management, and constriuction of teh harvesting intensity gradient using optimization to landscape level stand configurations.](/MyTemp/myGitLab/windDamage/externalFigs/overview2.png)
+![The study workflow from collecting initial stand conditions (2016) throught forest simulation growth under various ranges of forest management, and constriuction of teh harvesting intensity gradient using optimization to landscape level stand configurations.](/MyTemp/myGitLab/windDamage/externalFigs/overview2_horizontal.png)
 
 # Methods
 
 
-**Study area**
+```{r libraries, include = F}
+
+knitr::opts_chunk$set(echo = FALSE, 
+                      message=FALSE, 
+                      warning=FALSE, 
+                      dev="cairo_pdf", 
+                      fig.width=7, fig.height=3.5)
+
+```
+
+### Study area 
 
 Our study area represents a typical Finnish production forested landscape with relatively structurally homogenous forests stands. In total we used 1475 forests stands aggregated within a single watershed (number 14.534) in Central Finland, covering 2242 ha. Initial stand conditions were collected as open source data from the Finnish Forest Centre (available on www.metsaan.fi) providing currents stand conditions in 2016. 
 
 Our input datasets includes initial stand conditions, simulation of the forest regimes using forest growth simulator, and stand configurations over the range of optimal landscape level forest management, varying from over the harvest intensity is based on Eyvindosn et al. (2020) study, please refer for more details.
 
-![The study are located in Central Finland (watershed 14.534) comprising 1475 forest stands.](/MyTemp/myGitLab/windDamage/externalFigs/studyArea.png)
+![The study are located in Central Finland (watershed 14.534) comprising 1475 forest stands.](/MyTemp/myGitLab/windDamage/externalFigs/studyArea_crop.png)
 
 
 
-**Forest stand development under different regimes**
+### Forest stand development under different regimes
 
 We simulated the development of the forests stands using SIMO forest growth simulator (Rasinmäki et al., 2009) over 100 years, separated into 20 5-year sequences. Each stand could be managed by up to 58 different management regimes (the total number of regimes per stands depended on the stand initial conditions), including 17 regimes for rotation forestry (RF), 40 variations of continuous cover forest (CCF) and one set aside (SA), where no management actions were taken. RF regimes different in in timing of final felling, optionali thinning (present/absent), and increase in retained green trees after final cut (more details in Eyvindson et al., 2018). Basic CCF management follows rules from Äijälä et al. (2014). To increase the range of CCF managements, we varied two rules defining the timing of harvesting: site-specific basal area and timing of the first thining. The pre-defined site-specific basal area (m2/ha) requirement (16m2/ha for less fertile sites to 22m2/ha for fertile sites) prior to harvesting was modified by -3, ±0, +3, +6,  and we delayed the timing of the first harvest in 5 year increments up to a delay of 45 years. 
 
-**Optimization**
+### Optimization
 
 The collection of the optimal management regimes explore the trade-offs between between net present income (NPI) and forest multifunctionality. NPI represents economic value of the forests estimated by Metsähallitus (the Finnish governmental organization managing state owned forests) and higher NPI value presents higher timber extraction and oppose the proportion of the set-aside forest stands (i.e. without active harvesting). Optimization process over the NPI gradient was run using only RF, only CCF management types, or all possible managements (RF and CCF) included over the gradient of NPI values, from 0 (representing set-aside or no management in all stands) maximal amount of extracted timber (leaving up to 5% of SA stands). The optimization process resulted in creating of 63 alternative landscape development paths over 100 years period in 20 5-years time steps that different in applied management types (3) and levels of timber extraction (21), further referred as scenarios. Each optimized scenario represents a collection of management regimes applied uniquely over every stand. This setup allowed us to reconstruct the dynamics landscape development over time under combination of management regimes, and harvest extraction gradient.
 
-**Wind risk calculation** 
+###Wind risk calculation
 
 We have calculated the probability of wind damage based on @suvanto2019 binomial generalized linear model with logit-link function for each stand, under each scenario and at every time step. @suvanto2019 This model calculates the probability of the wind damage considering available relevant open-access datasets, specifically dominant tree species, dominant tree height, time since thinning, predicted levels on max wind speed (for next 10 years, this remain stable in this study), evaluated if stand has open edge, soil type, mineral soil depth, site fertility and temperature sum (refer to (Suvanto et al., 2019) for all details). As it is difficult to predict specific location of the occurrence of strong winds in the future, the model outputs show the relative differences between stands, damage can be only partial to the stand. To process the datasets, calculate damage probability models and visualize results we used (R Development Core Team, 2019). 
 
-**Data processing**
+### Data processing
 
 We calculated the probability of wind damage based on stand level for each stand, scenario and time intervals. First, we evaluated wind damage probability on stand level, which we averaged over the scenarios to allow comparison over the harvesting gradient, and application of RF, CCF and all possible management types. We hypothesized that RF would increase wind damage risk dues to increasing number of open edges while CCF would lower wind risk over the landscape. Further, we hypothetize that higher levels of timber extraction would increase wind risk. Lastly, we hypothetized than increasing amount of set-aside stands, over the landscape together with CCF management would increase wind damage risk due to larger present timber volume, and due to more frequent thinning activities. We investigated wind risk in terms of available timber volume, specifically saw and log timber volume. Lastly, we explored the trends of wind risk relevant to stands height, changes and species compositions. 
 
@@ -153,20 +163,21 @@ min(df.geom$area)
 
 
 
-**Landscape level wind risk under management restriction and harvest intensity scenarios**
+### Landscape level wind risk under management restriction and harvest intensity scenarios
 
-The set-aside landscape level management resulted at the same mean landscape level rsk for the all scenarios (Fig. 2). However, intensifying harvesting triggers different response under groups of management regimes and intensification of the timber extraction. The RF management techniques lowers the wind risk over whole harvest intensity gradient, ie.e with increasing economic gain we also lowers the wind damage probability. On the other hand, both ALL and CCF scenarios increase the wind risk where CCF monotonically increases with increasing harvesting rates, while ALL regimes have slightly humpened curve shape, culminating at XXX harvest intensity level. Then it slightly lovers. The CCF increases monotonically while maximal harvesting increase the wind risk by 25% compared to completely set-aside stands.
+The set-aside landscape level management resulted at the same mean landscape level risk for all management regimes (Fig. 2). However, intensifying harvesting triggers different responses under groups of management regimes and intensification of the timber extraction. Sole use of the RF managements lowered the wind risk with increasing harvest intensity. On the other hand, both ALL and CCF scenarios increased the wind risk where CCF monotonically increased with increasing harvesting rates, while ALL regimes have slightly humpened curve shape, culminating around inteinsity of 7.5K by ha. The CCF increases monotonically while maximal harvesting increase the wind risk by 25% compared to completely set-aside stands.
 
-``` {r mean_risk_by_intensity_plot, eval = F, echo = T, warning = F, fig.width = 3}
+``` {r fig3_mean_risk_by_intensity_plot, fig.width = 4, fig.height = 3.5, fig.cap = "Mean wind risk damage for three types of management regimes over  harvest intensity gradient"}
 
 df %>% 
   group_by(scenSimpl2, scenNumb, NPI) %>% 
   summarize(mean.m = mean(windRisk)) %>% 
-  ggplot(aes(x = NPI/tot.area*10,
+  ggplot(aes(x = NPI,
              y = mean.m,
              color = scenSimpl2,
              group = scenSimpl2)) + # ,
   geom_line(lwd = 1) +
+  ylim(0, 0.04)+
   labs(color = "Regimes") +
   xlab("NPI k € by ha") + #  
   ylab("mean wind risk damage (%)") +
@@ -177,15 +188,17 @@ df %>%
 
 ```
 
+### Timber volume at wind risk
+
+Increasing harvesting levels lowers the amount of the available timber at any time step to be lost due to windthrows. Interestingly, the CCF regimes produces higher logs volumes, while RF has higher production of the pulp wood, which is in high demand by cheaper then log wood. The same trends are visible for harvested log and pulp volumes. For ALL management regimes, using all available management regimes, is located between two extremities. The highest mean log timber volume as available for the wind damage at lowest harvesting levels. Interestingly, under RF, low levels of timber extraction increase levels of the pupl  standing volume. The highest amount of harvested log wood is produced by CCF regimes, while RF dominates in harvesting pulp timber. 
 
 
-
-```{r plot_V_timber,}
+```{r fig_4_plot_V_timber, fig.width = 7, fig.height = 5.7, fig.cap = "A. Mean standing and B. harvested pulp and log timber under three types of management regimes over harvest intensity gradient"}
 
 # -----------------------------------------
 # Visualize volume dynamics over scenarios
 # -----------------------------------------
-names(df)
+#names(df)
 
 vol_cols <- c("V", 
               "V_stand_log",
@@ -193,8 +206,6 @@ vol_cols <- c("V",
               "Harvested_V",
               "Harvested_V_log_under_bark",
               "Harvested_V_pulp_under_bark")
-
-
 
 
 # -------------------------------------------
@@ -242,8 +253,10 @@ p.stand <-
                        color = scenSimpl2)) +
   geom_line(size = 1) + 
   xlab("NPI k € by ha") +
-  ylab("mean stand volume") +
-  facet_wrap(.~ variable) 
+  ylab("mean stand volume (m3)") +
+   labs(color = "Regimes") +
+  facet_wrap(.~ variable) + 
+  ggtitle("A") 
 
 
 
@@ -256,19 +269,168 @@ p.harvested <-
              color = scenSimpl2)) +
   geom_line(size = 1) + 
   xlab("NPI k € by ha") +
+   labs(color = "Regimes") +
   ylab("sum harvested volume (*1000)") +
-  facet_wrap(.~ variable) 
-
+  facet_wrap(.~ variable) +
+  ggtitle("B")
 
 
 ggarrange(p.stand, p.harvested, ncol = 1, nrow = 2,
           common.legend = TRUE, legend="bottom")
 ```
 
+The intensification of the harvesting levels increases the proportion of the pulp wood compared to log wood, especially in RF. In CCF, the proportion among standing log and pulp volume remains at the same rate (65:30) where the production of the log timber dominates See figure  \@ref(fig:fig_5_proportion_V_pulp_log).
+
+```{r fig_5_proportion_V_pulp_log, eval = T, echo = F, warning = F, message = F, fig.width = 4, fig.height = 2, fig.cap = "Ratio between standing log and pul volume (m^3)"}
+# Here is te question: does the harvest intensification changes the proportion between log and pulp wood???
+
+V_sum          <- aggregate(V ~ scenSimpl2 +  scenNumb, df, sum)
+V_st_log_sum   <- aggregate(V_stand_log ~ scenSimpl2 +  scenNumb, df, sum)
+V_st_pulp_sum  <- aggregate(V_stand_pulp ~ scenSimpl2 +  scenNumb, df, sum)
+
+
+# Merge two sum of the pulp and log 
+# tables and calculate the proprtions:
+
+V.prop <- 
+  V_st_log_sum %>% 
+  left_join(V_st_pulp_sum) %>% 
+  mutate(V_total     = V_stand_log + V_stand_pulp) %>% 
+  mutate(V_log_prop  = V_stand_log/V_total * 100) %>% 
+  mutate(V_pulp_prop = V_stand_pulp/V_total * 100) %>% 
+  dplyr::select(-c(V_stand_log, V_stand_pulp, V_total)) 
 
 
 
+# Convert data from long to wide format
+V.prop.l <- reshape2::melt(V.prop, id.vars = c("scenSimpl2", 
+                                              # "NPI", 
+                                               "scenNumb"))
 
+# Plot proportion of teh timber volume based on type
+
+V.prop.l %>% 
+  ggplot(aes(x = scenNumb,
+             y = value,
+             fill = variable)) +
+  geom_bar(position="stack", 
+           stat="identity",
+           width = 0.5) +
+  facet_grid(.~ scenSimpl2) +
+  scale_fill_grey(start = 0.8, end = 0.2) +
+  ylab("Ratio standing\nlog:pulp timber volume") + 
+  xlab("Harvest intensity") +
+   labs(fill = "Timber volume type") 
+  
+
+```
+
+### Open stands frequency
+
+RF regimes increase the amount of stands with open edge with increasing harvest intensity  while CCF regimes maintain the same amount of open stands over the harvest intensity gradient. Intensive RF increases number of stands with open edge by 5%.    
+
+
+```{r fig_6_count_open_edge, eval = T, echo = F, warning = F, message = F, fig.width = 4, fig.height = 2, fig.cap = "Yearly count of stands with open edge over the intensity gradient"}
+
+# Plot open_edge FALSE = (closed stand) over SA %
+# ---------------------
+df %>% 
+  group_by(scenSimpl2, scenNumb, NPI, open_edge) %>% 
+  filter(open_edge == TRUE) %>% 
+  tally() %>% 
+  #group_by(scenSimpl2, scenNumb, NPI)# %>% 
+ # summarize(mean.m = mean(n)) #%>% 
+  ggplot(aes(x = NPI, #factor(scenNumb),
+             y = n/20,  # number of stands by one year
+             color = scenSimpl2,
+             group = scenSimpl2)) + # ,
+  geom_line(lwd = 1) +
+  xlab("Income") + 
+  ylab("# of stand with open edge (mean)") +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1),
+        legend.position = "bottom") +
+  ggtitle("") +
+  labs(color = "Regimes group") 
+
+```
+
+### Changes in species composition
+
+```{r fig_7_species_change, eval = T, echo = F, warning = F, message = F, fig.width = 7, fig.height = 3, fig.cap = "Changes in species composition under different management types and harvest intensity"}
+
+
+
+# Species composition in 2016
+#p.sp.2016 <- 
+  df %>%
+  filter(year == 2016) %>%
+  group_by(simpleScen, scenNumb, species) %>% 
+  dplyr::summarize(counts = n()) %>% 
+  ggplot(aes(x = scenNumb,
+             y = counts,
+             color = species)) +
+  geom_line()
+  
+
+ggplot(aes(x = scenNumb,
+             fill = species)) +
+ 
+  #geom_histogram(stat = "count") +
+  geom_area(position="fill", stat="count")+
+  facet_grid(scenSimpl2 ~ .) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) +
+  ggtitle("Species composition: 2016")
+
+# Species composition at the end
+
+p.sp.2111 <- 
+  df %>%
+  filter(year == 2111) %>%
+  ggplot(aes(x = scenNumb,
+             fill = species)) +
+  #geom_histogram(stat = "count") +
+  geom_area(position="fill", stat="count")+
+  facet_grid(scenSimpl2 ~ .) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) +
+  ggtitle("Species composition: 2111")
+
+
+```
+
+
+```{r}
+# Species composition in 2016
+p.sp.2016 <- 
+  df %>%
+  filter(year == 2016) %>%
+  ggplot(aes(x = scenNumb,
+             fill = species)) +
+  #geom_histogram(stat = "count") +
+  geom_area(position="fill", stat="count")+
+  facet_grid(scenSimpl2 ~ .) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) +
+  ggtitle("Species composition: 2016")
+
+# Species composition at the end
+
+p.sp.2111 <- 
+  df %>%
+  filter(year == 2111) %>%
+  ggplot(aes(x = scenNumb,
+             fill = species)) +
+  #geom_histogram(stat = "count") +
+  geom_area(position="fill", stat="count")+
+  facet_grid(scenSimpl2 ~ .) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) +
+  ggtitle("Species composition: 2111")
+
+ 
+ggarrange(p.sp.2016, p.sp.2111, 
+          ncol = 2, nrow = 1,
+          common.legend = TRUE, 
+          legend="bottom")
+
+```
 
 
 
